Added async client class

--- a/SecureIM.Desktop/SecureIM.Desktop.csproj
+++ b/SecureIM.Desktop/SecureIM.Desktop.csproj
@@ -82,6 +82,7 @@
     <Compile Include="controller\abstractions\AbstractComms.cs" />
     <Compile Include="controller\abstractions\AbstractCrypto.cs" />
     <Compile Include="model\abstractions\AbstractSmartcard.cs" />
+    <Compile Include="model\AsynchronusClient.cs" />
     <Compile Include="model\IMUser.cs" />
     <Compile Include="model\IMBroker.cs" />
     <Compile Include="model\Smartcard.cs" />
