--- a/Demo/packages.config
+++ b/Demo/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net40" />
-  <package id="MvvmLight" version="4.2.32.7" targetFramework="net40" />
-  <package id="MvvmLightLibs" version="4.4.32.7" targetFramework="net40" requireReinstallation="true" />
+  <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
+  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net461" />
   <package id="WPFChromeTabsMVVM" version="1.2.7" targetFramework="net40" />
 </packages>
