More static typing in XAML

--- a/SecureIM.Smartcard/SecureIM.Smartcard.csproj
+++ b/SecureIM.Smartcard/SecureIM.Smartcard.csproj
@@ -128,9 +128,11 @@
     <Compile Include="controller\smartcard\APDUFactory.cs" />
     <Compile Include="controller\smartcard\SmartcardController.cs" />
     <Compile Include="model\abstractions\AbstractSmartcard.cs" />
+    <Compile Include="model\abstractions\ICryptoHandler.cs" />
     <Compile Include="model\smartcard\enums\SecureIMCardInstructions.cs" />
     <Compile Include="model\smartcard\SCIM_INS_CODES.cs" />
     <Compile Include="model\smartcard\Smartcard.cs" />
+    <Compile Include="model\smartcard\SmartcardCryptoHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
