Smartcrad API progreess

--- a/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
+++ b/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
@@ -63,6 +63,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SecureIM.Smartcard\SecureIM.Smartcard.csproj">
+      <Project>{c4d4f353-9443-4512-9298-6328059b47d3}</Project>
+      <Name>SecureIM.Smartcard</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
