--- a/SecureIM.Smartcard/SecureIM.Smartcard.csproj
+++ b/SecureIM.Smartcard/SecureIM.Smartcard.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="JetBrains.Annotations, Version=10.2.1.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.10.2.1\lib\net\JetBrains.Annotations.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Moq, Version=4.5.29.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.5.29\lib\net45\Moq.dll</HintPath>
       <Private>True</Private>
@@ -127,9 +131,11 @@
     <Compile Include="controller\crypto\Crypto.cs" />
     <Compile Include="controller\smartcard\APDUFactory.cs" />
     <Compile Include="controller\smartcard\SmartcardController.cs" />
+    <Compile Include="controller\smartcard\SmartcardControllerBuilder.cs" />
     <Compile Include="model\abstractions\AbstractSmartcard.cs" />
     <Compile Include="model\abstractions\ICryptoHandler.cs" />
     <Compile Include="model\smartcard\enums\SecureIMCardInstructions.cs" />
+    <Compile Include="model\smartcard\enums\SmartcardException.cs" />
     <Compile Include="model\smartcard\SCIM_INS_CODES.cs" />
     <Compile Include="model\smartcard\Smartcard.cs" />
     <Compile Include="model\smartcard\SmartcardCryptoHandler.cs" />
