--- a/SecureIM.Smartcard/packages.config
+++ b/SecureIM.Smartcard/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net461" />
+  <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net461" />
   <package id="log4net" version="2.0.6" targetFramework="net461" />
   <package id="Moq" version="4.5.29" targetFramework="net461" />
   <package id="PCSC" version="3.6.0" targetFramework="net461" />
