--- a/SecureIM.ChatGUI/packages.config
+++ b/SecureIM.ChatGUI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net40" />
+  <package id="JetBrains.dotMemoryUnit" version="2.3.20160517.113140" targetFramework="net461" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net461" />
   <package id="WPFChromeTabsMVVM" version="1.2.7" targetFramework="net40" />
