--- a/SecureIM.Smartcard/SecureIM.Smartcard.csproj
+++ b/SecureIM.Smartcard/SecureIM.Smartcard.csproj
@@ -128,6 +128,7 @@
     <Compile Include="controller\smartcard\APDUFactory.cs" />
     <Compile Include="controller\smartcard\SmartcardController.cs" />
     <Compile Include="controller\smartcard\SmartcardControllerBuilder.cs" />
+    <Compile Include="helpers\EncodingForBase64.cs" />
     <Compile Include="model\abstractions\ICryptoHandler.cs" />
     <Compile Include="model\smartcard\enums\SecureIMCardInstructions.cs" />
     <Compile Include="model\smartcard\enums\SmartcardException.cs" />
