--- a/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
+++ b/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
@@ -55,11 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChatBackend.cs" />
+    <Compile Include="model\Message.cs" />
     <Compile Include="model\Comms.cs" />
-    <Compile Include="model\User.cs" />
     <Compile Include="IChatBackend.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="model\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
