--- a/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
+++ b/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
@@ -55,9 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChatBackend.cs" />
+    <Compile Include="model\MessageComposite.cs" />
     <Compile Include="model\Message.cs" />
     <Compile Include="model\Comms.cs" />
     <Compile Include="IChatBackend.cs" />
+    <Compile Include="model\MessageFlags.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="model\User.cs" />
   </ItemGroup>
