Encrypt-decrypt flow via self now working

--- a/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
+++ b/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
@@ -55,6 +55,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChatBackend.cs" />
+    <Compile Include="ChatCommandHandler.cs" />
+    <Compile Include="helpers\BackendHelper.cs" />
     <Compile Include="model\MessageComposite.cs" />
     <Compile Include="model\Message.cs" />
     <Compile Include="model\Comms.cs" />
