--- a/SecureIM.Smartcard/SecureIM.Smartcard.csproj
+++ b/SecureIM.Smartcard/SecureIM.Smartcard.csproj
@@ -129,6 +129,7 @@
     <Compile Include="controller\smartcard\SmartcardController.cs" />
     <Compile Include="controller\smartcard\SmartcardControllerBuilder.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="helpers\ByteArrayHelper.cs" />
     <Compile Include="helpers\EncodingForBase64.cs" />
     <Compile Include="model\abstractions\ICryptoHandler.cs" />
     <Compile Include="model\smartcard\enums\SecureIMCardInstructions.cs" />
