Chat history is now retained

--- a/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
+++ b/SecureIM.ChatBackend/SecureIM.ChatBackend.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ChatBackend.cs" />
     <Compile Include="ChatCommandHandler.cs" />
     <Compile Include="helpers\BackendHelper.cs" />
+    <Compile Include="model\IMException.cs" />
     <Compile Include="model\MessageComposite.cs" />
     <Compile Include="model\Message.cs" />
     <Compile Include="model\Comms.cs" />
