--- a/SecureIM.Smartcard/SecureIM.Smartcard.csproj
+++ b/SecureIM.Smartcard/SecureIM.Smartcard.csproj
@@ -133,7 +133,7 @@
     <Compile Include="helpers\EncodingForBase64.cs" />
     <Compile Include="model\abstractions\ICryptoHandler.cs" />
     <Compile Include="model\smartcard\enums\SecureIMCardInstructions.cs" />
-    <Compile Include="model\smartcard\enums\SmartcardException.cs" />
+    <Compile Include="model\smartcard\SmartcardException.cs" />
     <Compile Include="model\smartcard\SCIM_INS_CODES.cs" />
     <Compile Include="controller\smartcard\SmartcardCryptoHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
