--- a/SecureIM.ChatGUI/packages.config
+++ b/SecureIM.ChatGUI/packages.config
@@ -6,5 +6,9 @@
   <package id="JetBrains.dotMemoryUnit" version="2.3.20160517.113140" targetFramework="net461" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net461" />
+  <package id="PostSharp" version="4.3.29" targetFramework="net461" />
+  <package id="PostSharp.Patterns.Common" version="4.3.29" targetFramework="net461" />
+  <package id="PostSharp.Patterns.Diagnostics" version="4.3.29" targetFramework="net461" />
+  <package id="PostSharp.Patterns.Threading" version="4.3.29" targetFramework="net461" />
   <package id="WPFChromeTabsMVVM" version="1.2.7" targetFramework="net40" />
 </packages>
