--- a/SecureIM.ChatBackend/packages.config
+++ b/SecureIM.ChatBackend/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net461" />
   <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net461" />
-  <package id="Moq" version="4.5.29" targetFramework="net461" />
+  <package id="Moq" version="4.7.1" targetFramework="net461" />
   <package id="NLog" version="4.4.3" targetFramework="net461" />
   <package id="NLog.Config" version="4.4.3" targetFramework="net461" />
   <package id="NLog.InstallNLogConfig" version="2.0" targetFramework="net461" />
   <package id="NLog.Schema" version="4.4.3" targetFramework="net461" />
+  <package id="NUnit" version="3.6.1" targetFramework="net461" />
   <package id="PostSharp" version="4.3.29" targetFramework="net461" />
   <package id="PostSharp.Patterns.Common" version="4.3.29" targetFramework="net461" />
   <package id="PostSharp.Patterns.Diagnostics" version="4.3.29" targetFramework="net461" />
