--- a/SecureIM.Smartcard/packages.config
+++ b/SecureIM.Smartcard/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net461" />
   <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net461" />
   <package id="log4net" version="2.0.6" targetFramework="net461" />
-  <package id="Moq" version="4.5.29" targetFramework="net461" />
+  <package id="Moq" version="4.7.1" targetFramework="net461" />
+  <package id="NUnit" version="3.6.1" targetFramework="net461" />
   <package id="PCSC" version="3.6.0" targetFramework="net461" />
-  <package id="System.AppContext" version="4.1.0" targetFramework="net461" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net461" />
   <package id="System.Console" version="4.0.0" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
