--- a/SecureIM.ChatBackend/app.config
+++ b/SecureIM.ChatBackend/app.config
@@ -1,11 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+    <assemblyBinding
+      xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="PostSharp" publicKeyToken="b13fd38b8f9c99d7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.3.29.0" newVersion="4.3.29.0" />
+        <assemblyIdentity
+          name="PostSharp"
+          publicKeyToken="b13fd38b8f9c99d7"
+          culture="neutral" />
+        <bindingRedirect
+          oldVersion="0.0.0.0-4.3.29.0"
+          newVersion="4.3.29.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <netPeerTcpBinding>
+        <binding
+          name="Wimpy">
+          <resolver
+            mode="Pnrp" />
+          <security
+            mode="None">
+            <transport
+              credentialType="Password" />
+          </security>
+        </binding>
+      </netPeerTcpBinding>
+    </bindings>
+    <client>
+      <endpoint
+        address="net.p2p://Chat"
+        binding="netPeerTcpBinding"
+        bindingConfiguration="Wimpy"
+        contract="SecureIM.ChatBackend.IChatBackend"
+        name="ChatEndpoint"
+        kind=""
+        endpointConfiguration="">
+        <identity>
+          <dns
+            value="localhost" />
+          <certificateReference
+            storeName="My"
+            storeLocation="LocalMachine"
+            x509FindType="FindBySubjectDistinguishedName" />
+        </identity>
+      </endpoint>
+    </client>
+    <services>
+      <service
+        name="SecureIM.ChatBackend.ChatBackend">
+        <endpoint
+          address="net.p2p://Chat"
+          binding="netPeerTcpBinding"
+          bindingConfiguration="Wimpy"
+          name="Chat"
+          contract="SecureIM.ChatBackend.IChatBackend" />
+      </service>
+    </services>
+  </system.serviceModel>
 </configuration>
